flux/infrastructure/headlamp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headlamp
spec:
  ingressClassName: nginx
  rules:
  - host: headlamp.${GLOBAL_DOMAIN}
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: headlamp
            port:
              number: 11434
  tls:
    - hosts:
        - headlamp.${GLOBAL_DOMAIN}
      secretName: headlamp-tls
